--- a/central_subway.html
+++ b/central_subway.html
@@ -12,7 +12,7 @@
 
  <figure>
         <img src="image_central_subway_2024-08-08_t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
-        <figcaption>A T train arriving at the 4th and King platform. Boarding this train takes you eventually to Moscone Center, Union Square, and Chinatown through the brand new Central Subway. The value of this piece of infrastructure as it is currently implemented has been questioned however (Picture taken 8/8/24).</figcaption>
+        <figcaption>A T train arriving at the 4th and King platform. Boarding this train takes you eventually to Moscone Center, Union Square, and Chinatown through the brand new Central Subway. The value of this piece of infrastructure as it is currently implemented has been questioned however. (Picture taken 8/8/24)</figcaption>
     </figure>
 
     <h2>Table of Contents</h2>
