--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -15,7 +15,7 @@
 
 <p> In this article we will cover </p>
     <ol>
-        <li>A quick explainer of the routes taken in colllecting data.
+        <li>A quick explainer of the routes taken in colllecting data.</li>
         <li>An overview of the northbound run including methods</li>
         <li>A similar ovewview but this time for the southbound run</li>
         <li>A display of the data and what went wrong in the data collection</li>
@@ -31,11 +31,12 @@
     <p>I measured not only the total time between starting point and ending point, but time between any signficant events within the trip as well. This was done by simply pressing "lap" on my stopwatch. All of these times between significant events when added together would equal the total time between the starting and ending point.</p>
     <p>For northbound runs (T Third Street), these times between significant events were:</p>
     <ol>
-    <li>Walk time betweeen Caltrain station to the T platform at 4th and King</li>
-    <li>Wait time on the 4th and King platform for a T train to arrive</li>
-    <li>Ride time between 4th and King to Union Square station on the T</li>
-      <ul>
-      <li>(I started measuring a rough time taken for the train to actually reach the Central Subway tunnel starting on my second run as well)</li>
+        <li>Walk time betweeen Caltrain station to the T platform at 4th and King</li>
+        <li>Wait time on the 4th and King platform for a T train to arrive</li>
+        <li>Ride time between 4th and King to Union Square station on the T</li>
+        <ul>
+            <li>(I started measuring a rough time taken for the train to actually reach the Central Subway tunnel starting on my second run as well)</li>
+        </ul>
     <li>Walk time between Union Square station platform to the Dewey Monument</li>  
     </ol>
 
@@ -49,12 +50,12 @@
 
     <p>An overview of the Northbound run involves:</p>
     <ol>
-    <li>Leaving the Caltrain Station at 4th and King streets. The stopwatch was started the moment I left the doors of the station facing 4th and King streets.</li>
+        <li>Leaving the Caltrain Station at 4th and King streets. The stopwatch was started the moment I left the doors of the station facing 4th and King streets.</li>
      <figure>
         <img src="image_central_subway_2024-08-08_leaving_caltrain_station.jpg" alt="Leaving the Caltrain Station">
         <figcaption>I started measuring the time the moment I walked out of the doors at the Caltrain Station facing the intersection of 4th and King streets. (Picture taken 8/8/24)</figcaption>
      </figure>
-    <li>Walking to the T platform. This involved crossing two crosswalk, first across King street, and then half of 4th street onto the T platform in the medan of 4th street. The time for "Walk time betweeen Caltrain station to the T platform at 4th and King" stops when I finish climbing the ramp onto the T platform.</li>
+        <li>Walking to the T platform. This involved crossing two crosswalk, first across King street, and then half of 4th street onto the T platform in the medan of 4th street. The time for "Walk time betweeen Caltrain station to the T platform at 4th and King" stops when I finish climbing the ramp onto the T platform.</li>
      <figure>
         <img src="image_central_subway_2024-08-08_approaching_intersection_to_4th_and_king_crossing.jpg" alt="Approaching the crosswalks at 4th and King streets on my way to the T platform">
         <figcaption>Approaching the crosswalks at 4th and King streets on my way to the T platform. (Picture taken 8/8/24)</figcaption>
@@ -82,7 +83,6 @@
         <img src="image_central_subway_2024-08-08_leaving_union_square_station.jpg" alt="Leaving Union Square station, and I am greeted by downtown San Francisco at Stockton and Ellis street"
         <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street, by Market Street.  (Picture taken 8/8/24)</figcaption>
     </figure>
-    >
     <figure>
         <img src="image_central_subway_2024-08-08_approaching_union_square_at_stockton_and_geary.jpg" alt="Union Square, at Stockton and Geary">
         <figcaption>Having walked across two crossings obeying all traffic laws, I approach Union Square at the intersection between Stockton and Geary. The median strip straight ahead is where I will board the bus back to the Caltrain station. (Picture taken 8/8/24)</figcaption>
@@ -102,7 +102,7 @@
         <figcaption>The bus stop as seen from when I approached Union Square. The route out of Union Square to the bus stop and the stop itself is circled in yellow. (Picture taken 8/8/24)</figcaption>
      </figure>
     <li>Waiting for the next bus that would take me back, the 15, 30, and 45 buses. Unfortunately I have no image.</li>
-    <li>Taking the bus to the bus stop nearest to the 4th and King Caltrain station. Time spent on the bus starts when I step on the bus, and ends when I step off of it at my destination. The routing of the 3 buses are complicated and is explained below. 
+    <li>Taking the bus to the bus stop nearest to the 4th and King Caltrain station. Time spent on the bus starts when I step on the bus, and ends when I step off of it at my destination. The routing of the 3 buses are complicated and is explained below.</li>
         <ul>
             <li>The 15 bus runs south down Stockton, and once it crosses Market Street, runs straight down 4th street until it reaches the Caltrain station at 4th and King street. Once I get off the bus however, I have to cross King street, the same street I crossed to get to the T platform from the Caltrain station, except this time, I'm crossing in the other direction. The 15 arrives every 12 minutes on weekdays during mornings and midday. This is lower frequency than the Muni Metro T line. [1]</li>
             <li>The 30 bus has two variants, the 30 short and the 30 long. This is not an issue to us however, as the difference in routing happens north of Union Square. The 30, like the 15 runs straight down 4th street. However, the 30 terminates at the Caltrain station unlike the 15 which continues south. This means that the 30 takes a left at Townsend street to loop around for a northbound run down adjacent 3rd street. Though the Caltrain station is addressed at 4th and King streets, since the station takes up the whole block between King and Townsend streets, the 4th and Townsend bus stop is actually right in front of the Caltrain station. However, as the 4th and Townsend bus stop for the 30 is on the other side of 4th street from the Caltrain station, it requires us to cross Townsend street with a possible traffic light hindering our progress. The 30 short arrives every 7 minutes in the morning and 6 minutes midday on weekdays, and the 30 long arrives every 15 minutes in the morning and 12 minutes midday on weekdays. The 30 short and long together provide a frequency far greater than the Metro T line. [2]</li>
