--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -110,6 +110,10 @@
         </ul>
     <li>Stepping off of the bus, we walk from the various bus stops for each bus route as explained above to the nearest entrance at the San Francisco Caltrain station.</li>
     </ol>
+    <figure>
+        <img src="image_central_subway_2024-08-08_45_bus_4th_and_townsend" alt="45 Union Stockton at 4th and Townsend">
+        <figcaption>Stepping off of the 45 Union / Stockton bus at the 4th and Townsend bus stop closest to the Caltrain station. The station is only steps away from this stop. Note that there is another 4th and Townsend stop that the 30 Stockton drops us off at on the other side of 4th street. (Picture taken 8/8/24)</figcaption>
+    </figure>
 <h3>Sources</h3>
     <ul>
         <li>[1]: https://www.sfmta.com/routes/15-bayview-hunters-point-express</li>
