--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -108,12 +108,21 @@
             <li>The 30 bus has two variants, the 30 short and the 30 long. This is not an issue to us however, as the difference in routing happens north of Union Square. The 30, like the 15 runs straight down 4th street. However, the 30 terminates at the Caltrain station unlike the 15 which continues south. This means that the 30 takes a left at Townsend street to loop around for a northbound run down adjacent 3rd street. Though the Caltrain station is addressed at 4th and King streets, since the station takes up the whole block between King and Townsend streets, the 4th and Townsend bus stop is actually right in front of the Caltrain station. However, as the 4th and Townsend bus stop for the 30 is on the other side of 4th street from the Caltrain station, it requires us to cross Townsend street with a possible traffic light hindering our progress. The 30 short arrives every 7 minutes in the morning and 6 minutes midday on weekdays, and the 30 long arrives every 15 minutes in the morning and 12 minutes midday on weekdays. The 30 short and long together provide a frequency far greater than the Metro T line. [2]</li>
             <li>The 45 bus runs the same route that the 15 and 30 does, but takes a right at Harrison street so that it can then turn left down 5th street. At the intersection of 5th and Townsend streets, the bus turns left to run west down Townsend, where it drops me off at another bus stop named 4th and Townsend. However, this 4th and Townsend stop is on the side of 4th street that the Caltrain station is on, therefore I simply hop off the bus and walk to the Caltrain station in under a minute. The 45 bus runs every 10 minutes in the morning and midday on weekdays. This is identical frequency to the Muni Metro T line. [3]</li>
         </ul>
-    <li>Stepping off of the bus, we walk from the various bus stops for each bus route as explained above to the nearest entrance at the San Francisco Caltrain station.</li>
-    </ol>
-    <figure>
-        <img src="image_central_subway_2024-08-08_45_bus_4th_and_townsend" alt="45 Union Stockton at 4th and Townsend">
+     <figure>
+        <img src="image_central_subway_2024-08-08_45_bus_4th_and_townsend.jpg" alt="45 Union Stockton at 4th and Townsend">
         <figcaption>Stepping off of the 45 Union / Stockton bus at the 4th and Townsend bus stop closest to the Caltrain station. The station is only steps away from this stop. Note that there is another 4th and Townsend stop that the 30 Stockton drops us off at on the other side of 4th street. (Picture taken 8/8/24)</figcaption>
     </figure>
+    <li>Stepping off of the bus, we walk from the various bus stops for each bus route as explained above to the nearest entrance at the San Francisco Caltrain station.</li>
+    <figure>
+        <img src="image_central_subway_2024-08-08_arriving_caltrain_station_4th_and_townsend.jpg" alt="Caltrain station north entrance">
+        <figcaption>The entrance to the Caltrain station facing Townsend street. The entrance is mere steps away from the 45 bus' 4th and Townsend stop.</figcaption>
+    </figure>
+        
+    </ol>
+   
+
+image_central_subway_2024-08-08_arriving_caltrain_station_4th_and_townsend
+    
 <h3>Sources</h3>
     <ul>
         <li>[1]: https://www.sfmta.com/routes/15-bayview-hunters-point-express</li>
