--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -115,7 +115,7 @@
     <li>Stepping off of the bus, we walk from the various bus stops for each bus route as explained above to the nearest entrance at the San Francisco Caltrain station.</li>
     <figure>
         <img src="image_central_subway_2024-08-08_arriving_caltrain_station_4th_and_townsend.jpg" alt="Caltrain station north entrance">
-        <figcaption>The entrance to the Caltrain station facing Townsend street. The entrance is mere steps away from the 45 bus' 4th and Townsend stop. Note the bus parked in the left corner of the photo across the street. That is the 30 bus' 4th and Townsend stop.</figcaption>
+        <figcaption>The entrance to the Caltrain station facing Townsend street. The entrance is mere steps away from the 45 bus' 4th and Townsend stop. Note the bus parked in the left side of the photo across the street. That is the 30 bus' 4th and Townsend stop.</figcaption>
     </figure>
         
     </ol>
