--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -110,7 +110,7 @@
         </ul>
      <figure>
         <img src="image_central_subway_2024-08-08_45_bus_4th_and_townsend.jpg" alt="45 Union Stockton at 4th and Townsend">
-        <figcaption>Stepping off of the 45 Union / Stockton bus at the 4th and Townsend bus stop closest to the Caltrain station. The station is only steps away from this stop. Note that there is another 4th and Townsend stop that the 30 Stockton drops us off at on the other side of 4th street. Also note that as the 45 departs its 4th and Townsend stop, it crosses 4th street and stops at the 30 bus' 4th and Townsend stop where it picks up passengers for its' northbound run. (Picture taken 8/8/24)</figcaption>
+        <figcaption>Stepping off of the 45 Union / Stockton bus at the 4th and Townsend bus stop closest to the Caltrain station. The station is only steps away from this stop. Note that there is another 4th and Townsend stop that the 30 Stockton drops us off at on the other side of 4th street. (Picture taken 8/8/24)</figcaption>
     </figure>
     <li>Stepping off of the bus, we walk from the various bus stops for each bus route as explained above to the nearest entrance at the San Francisco Caltrain station.</li>
     <figure>
