--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -109,6 +109,10 @@
             <li>The 45 bus runs the same route that the 15 and 30 does, but takes a right at Harrison street so that it can then turn left down 5th street. At the intersection of 5th and Townsend streets, the bus turns left to run west down Townsend, where it drops me off at another bus stop named 4th and Townsend. However, this 4th and Townsend stop is on the side of 4th street that the Caltrain station is on, therefore I simply hop off the bus and walk to the Caltrain station in under a minute. The 45 bus runs every 10 minutes in the morning and midday on weekdays. This is identical frequency to the Muni Metro T line. [3]</li>
         </ul>
      <figure>
+         <img src="image_central_subway_2_map_of_bus_stops_at_caltrain_station.png" alt="Diagram of the various bus stops around the Caltrain station">
+         <figcaption>A map showing the routes and locations that each bus, the 15, 30, and 45 drops off passengers at near the Caltrain station at 4th and King. Note the two different 4th and Townsend stops for the 30 and 45 respectively, with the 45's stop being much closer. Also note the 15's stop being much farther from the Caltrain station than the 30 and 45 despite the bus stop's name matching the address of the Caltrain station, 4th and King. Original map courtesy of Google Maps. (Picture edited and uploaded 8/23/24)</figcaption>
+     </figure>
+     <figure>
         <img src="image_central_subway_2024-08-08_45_bus_4th_and_townsend.jpg" alt="45 Union Stockton at 4th and Townsend">
         <figcaption>Stepping off of the 45 Union / Stockton bus at the 4th and Townsend bus stop closest to the Caltrain station. The station is only steps away from this stop. Note that there is another 4th and Townsend stop that the 30 Stockton drops us off at on the other side of 4th street. (Picture taken 8/8/24)</figcaption>
     </figure>
