--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -23,7 +23,7 @@
         <li>Some comments for what I would do differently on my next run</li>
     </ol>
     
-<p>I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 30 Stockton or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
+<p>I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 15 Bayview Hunters Point Express, 30 Stockton, or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
      <figure>
         <img src="image_central_subway_2024-08-08_caltrain_station_arrival.jpg" alt="Arrived at the Caltrain Station">
         <figcaption>Picture from when I started measuring data at the Caltrain Station at 4th and King. (Picture taken 8/8/24)</figcaption>
