--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -40,10 +40,10 @@
     <li>Walk time between Union Square station platform to the Dewey Monument</li>  
     </ol>
 
-    <p>For southbound runs (30 Stockton / 45 Union Stockton), these times between significant events were:</p>
+    <p>For southbound runs (15 Bayview Hunters Point Express / 30 Stockton / 45 Union Stockton), these times between significant events were:</p>
     <ol>
     <li>Walk time from the Dewey Monument to the bus stop at Stockton and Geary</li>
-    <li>Wait time at the Stockton and Geary bus stop for the next 30 or 45 to arrive</li>
+    <li>Wait time at the Stockton and Geary bus stop for the next 15, 30, or 45 to arrive</li>
     <li>Ride time between Stockton and Geary to Townsend and 4th near the Caltrain station</li>
     <li>Walk time between Townsend and 4th to the Caltrain station</li>  
     </ol>
