--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -18,9 +18,6 @@
         <li>1. A quick explainer of the routes taken in colllecting data, and what sort of data I wanted to collect / collected.</li>
         <li>2. An overview of the northbound run including methods</li>
         <li>3. A similar ovewview but this time for the southbound run</li>
-        <li>4. A display of the data and what went wrong in the data collection</li>
-        <li>5. Some statistical analysis (though we won't do too much of this as the data is flawed anyway)</li>
-        <li>S6. ome comments for what I would do differently on my next run</li>
     </ol>
 
 <h3>A Quick Explainer of the Routes Taken and the Kind of Data Collected</h3>
@@ -131,9 +128,8 @@
         <figcaption>The chart showing the data from my invalidated runs on 8/8. Inaccurate data due to my fumbles are highlighted in red. Not all variables have been measured and / or recorded.</figcaption>
     </figure>
 
-<h3>5. Some Statistical Analysis of the Data</h3>
-    <p>I'm going to perform some statistical analysis of the data despite this data being inaccurate. Perhaps, I'll find something out you know? And besides, it'll be good preparation for when I do acutally collect good data. Now, we can't compare whether the subway or the bus is faster for north our south runs, the ultimate goal of this study as we only have one mode of transportation for each direction, and the data we have anyway is invalid. What we can do however, is for example, take the mean and root mean squared error (RMSE) of the wait times for the subway and comparing it to the official result, or measuring the speeds of the subway on the surface section and subway section and comparing them. We can also take the average time between two points on the subway ride and compare them to the official schedule to see it's on time performance. This would be more difficult to achieve with the buses, as there are multiple routes running in the same direction, but as for our run on 8/8, we somehow only rode the 45, we may be able to find something out for that specific route. It likely won't be useful later, as I imagine on future runs we will ride the 30 or 15, not just the 45, but it'll be a fun little sidequest. </p> 
-
+<p>Now that we have the data measured (albeit not very usable), we can perform *some* statistical analysis on them, which we will do in the next article.</p>
+    
 <h3>Sources</h3>
     <ul>
         <li>[1]: https://www.sfmta.com/routes/15-bayview-hunters-point-express</li>
