--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-
+    <p><a href="index.html">Back to Home</a></p>
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
     <h2>2. Measuring (Invalidated) Data (8/22/24)</h2>
     <p><a href="central_subway_1.html">Previous Article: 1. Is Muni’s Central Subway in San Francisco Really Efficient? (8/6/24) </a></p>
