--- a/central_subway_1.html
+++ b/central_subway_1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-
+    <p><a href="index.html">Back to Home</a></p>
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
     <h2>1. The Background and the Idea (8/6/24)</h2>
     <p><a href="central_subway_2.html">Next Article: 2. Measuring (Invalidated) Data (8/23/24)</a></p>
