--- a/personal_projects.html
+++ b/personal_projects.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
+    <p><a href="index.html">Back to Home</a></p>
     <h1>Personal Projects</h1>
     <p>See my personal projects here!</p>
     <p><a href="independent_measurement">Measuring Permeability of Free Space &mu;<sub>0</sub> Using Mutual Induction</a> (Spring 2024)</p>
