--- a/central_subway.html
+++ b/central_subway.html
@@ -19,7 +19,7 @@
     <h2>Table of Contents</h2>
     <p><a href="central_subway_1.html">1. The Background and the Idea (8/6/24)</a></p>
     <p><a href="central_subway_2.html">2. Measuring (Invalidated) Data (8/22/24)</a></p>
-    <p><a hred="central_subway_3.html">3. Statistical Analysis of My First Batch of (Flawed) Data (8/26/24)<a/></p>
+    <p><a href="central_subway_3.html">3. Statistical Analysis of My First Batch of (Flawed) Data (8/26/24)<a/></p>
     
 </body>
 </html>
