--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -11,7 +11,7 @@
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
     <h2>2. Measuring (Invalidated) Data (8/22/24)</h2>
     <p><a href="central_subway_1.html">Previous Article: 1. Is Muni’s Central Subway in San Francisco Really Efficient? (8/6/24) </a></p>
-     <p><a hred="central_subway_3.html">Next Article: 3. Statistical Analysis of My First Batch of (Flawed) Data (8/26/24)<a/></p>
+     <p><a href="central_subway_3.html">Next Article: 3. Statistical Analysis of My First Batch of (Flawed) Data (8/26/24)<a/></p>
     <p>I took my first set of data points on 8/8/2024, a Thursday. Note that this article is being written AFTER the data was collected. It's also worth noting, that though I did do 5 runs, that I figured out during the run, that the data I collected was invalidated, since I likely took the wrong exit out of Union Square station on my way to Dewey Monument. I also struggled to locate exactly the location of the bus stop on my way back on my first run. My second run was marred by me accidentally resetting the stopwatch as I was writing down data and therefore possibly not exact. Upon returning home and looking through Google Maps to locate the exact street names and intersection names in preparation for writing this article, I found that there was another entrance to Union Square station located closer to Union Square than the one I took. Therefore, my data is invalid, as it unfairly adds to the travel time for the subway due to the extended walk from a further exit, as well as the multiple blunders I had in collecting data along the way. Nonetheless, I proceeded to take and analyze the data (so I know what to do when I redo this run soon and because why not) in this article.</p> 
 
 <p> In this article we will cover </p>
