--- a/my_students.html
+++ b/my_students.html
@@ -12,7 +12,7 @@
     <p>I help teach students at Miller Middle School during breaks in the school year. See what I do in the classroom here!</p>
      <figure>
         <img src="miller_teacher_2023.jpg" alt="Me teaching 8th grade students math in Summer 2023">
-        <figcaption>Me teaching 8th grade students math in Summer 2023</figcaption>
+        <figcaption>Me teaching 8th grade students math in Summer 2023.</figcaption>
      </figure>
 </body>
 </html>
