--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -18,7 +18,8 @@
     <ol>
         <li>1. A quick explainer of the routes taken in colllecting data, and what sort of data I wanted to collect / collected.</li>
         <li>2. An overview of the northbound run including methods</li>
-        <li>3. A similar ovewview but this time for the southbound run</li>
+        <li>3. A similar overview but this time for the southbound run</li>
+        <li>4. A quick display of the data</li>
     </ol>
 
 <h3>A Quick Explainer of the Routes Taken and the Kind of Data Collected</h3>
