--- a/central_subway_3.html
+++ b/central_subway_3.html
@@ -34,6 +34,7 @@
         <li>Mean and RMSE for northbound train total trip time: 1420.2 &pm; 315.2 [s] </li>
         <li>Mean and RMSE for southbound train total trip time: 823.4 &pm; 46.3 [s]</li>
     </ul>
+    <p>Already, we can see that the average trip time for the train is much longer. Now of course, this may change when we actually take valid data, and compare the different modes of transit going in the SAME direction, but for now, it seems that the train trip takes far longer than the bus trip. We will see later if the difference is statistically significant. We also see that there is a big difference in the RMSE between the train and bus rides. For the bus, the RMSE in the data is less than a minute, where as for the train, the RMSE is about 5 minutes. This goes to show that the bus (the 45 specifically, as the 45 was the only bus I rode) is far more reliable than the train. Wait times are shorter for the bus, and the bus' on time performance is also far more consistent. It is worth mentioning however, that the train trip time may be skewed due to the fact that on one of the runs, the train was severely delayed, and it took over 12 minutes from leaving 4th and King to entering the Central Subway.</p>
 
     
     
